--- a/temas.css
+++ b/temas.css
@@ -16,7 +16,27 @@
     width: 100%;
     height: 80px;
     background-color: rgb(201, 31, 192);
+    display: flex;
 }
+.Inicio{
+width: 80px;
+height: 75px;
+background-color: beige;
+margin: 2px;
+}
+.Sociales{
+width: 80px;
+height: 75px;
+background-color: beige;
+margin: 2px;
+}
+.Ingles{
+width: 80px;
+height: 75px;
+background-color: beige;
+margin: 2px;
+}
+
 .contenedor2{
     display: flex;
     width: 100%;
