--- a/estilos.css
+++ b/estilos.css
@@ -17,6 +17,13 @@
     
     }
     
+    .Fondotecnologia{
+    
+        background-image: url("rxmm.jpg");
+        
+        background-repeat: no-repeat;
+        
+        }
     
     
     .img{
@@ -62,4 +69,55 @@
      
     
     }
-    
+        
+    .contenido{
+
+        height: 280px;
+        
+        width: 100%;
+        
+        position: absolute;
+        
+        top: 410px;
+        
+         
+        
+        }
+        
+         
+        
+        .imagensociales{
+        
+         
+        
+        background-repeat: no-repeat;
+        
+        float:left;
+        
+        height: 200px;
+        
+        width: 260px;
+        
+        margin-left: 5px;
+        
+        margin-right:5px;
+        
+        background-image: url("medellin.jpeg");
+        
+        }
+        
+        
+        
+        .textosociales{
+        
+        text-align: justify;
+        
+        color: azure;
+        
+        font-size: 20px;
+        
+        
+        
+        }
+        
+        
