Actualizacion 1:20 de noviembre del 2023

--- a/estilos.css
+++ b/estilos.css
@@ -18,8 +18,12 @@
     }
     
     .Fondotecnologia{
+
+          
     
-        background-image: url("rxmm.jpg");
+
+    
+        background-image: url("fondo.jpg");
         
         background-repeat: no-repeat;
         
@@ -102,7 +106,7 @@
         
         margin-right:5px;
         
-        background-image: url("medellin.jpeg");
+        background-image: url("fondo.jpg");
         
         }
         
@@ -119,5 +123,28 @@
         
         
         }
+
+        .imagenoperadores{
+            
+            width: 190;
+            
+            height: 190px;
+            
+            border-radius: 10px;
+            
+            background-repeat: no-repeat;
+            
+             
+            
+            left: 180px;
+            
+            background-image: url(operadores.jpg );
+            
+
+
+}
+    
+            
+            
         
         
