--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,11 @@
     
     
     body{
-    
+     
+height:500px;
+
+      width: 500px;
+        
     background-image: url("fondo.jpg");
     
     background-repeat: no-repeat;
@@ -21,7 +25,7 @@
 
           
     
-
+      
     
         background-image: url("fondo.jpg");
         
@@ -64,7 +68,7 @@
     
     .texto{
     
-    font-size: 40px;
+    font-size: 35px;
     
     text-align: justify;
     
@@ -125,7 +129,8 @@
         }
 
         .imagenoperadores{
-            
+             
+           
             width: 190;
             
             height: 190px;
@@ -140,6 +145,25 @@
             
             background-image: url(operadores.jpg );
             
+
+
+
+
+}
+.imagenbasica{
+            
+    width: 300px;
+    
+    height: 148px;
+    
+    border-radius: 40px;
+    
+    background-repeat: no-repeat;
+    
+    left: 180px;
+    
+    background-image: url(basica.png );
+    
 
 
 }
