--- a/estilos.css
+++ b/estilos.css
@@ -168,6 +168,24 @@ height:500px;
 
 }
     
+
+.imagenequipostecno{
+            
+    width: 300px;
+    
+    height: 148px;
+    
+    border-radius: 40px;
+    
+    background-repeat: no-repeat;
+    
+    left: 180px;
+    
+    background-image: url(equipos\ tecno.jpg );
+    
+
+
+}
             
             
         
